Flight check added - check if Grimoire stack is available
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
 RUN make -f ./Makefile dockerinstall
 FROM alpine
 RUN apk add git bash
-COPY --from=builder /go/bin/sync-data-sources /usr/bin/
+COPY --from=builder /go/bin/syncdatasources /usr/bin/
