--- a/helm-charts/sds-helm/sds-helm/Chart.yaml
+++ b/helm-charts/sds-helm/sds-helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: json2hat Kubernetes deployment
-name: json2hat-helm
+description: sync-data-sources Kubernetes deployment
+name: sds-helm
 version: 0.1.0
