--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -26,8 +26,8 @@ metadata:
 {{- with .Values.labels -}}
 {{ toYaml . | nindent 4 }}
 {{ end }}
-    app.kubernetes.io/name: {{ include "json2hat-helm.name" . }}
-    helm.sh/chart: {{ include "json2hat-helm.chart" . }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: {{ .Values.secretType }}
@@ -35,5 +35,61 @@ type: {{ .Values.secretType }}
 missing_one_or_more_sh_secrets: "Please take a look at the NOTES.txt file"
 {{ end }}
 # SH secret ends
+{{ end }}
+{{- $skipESSecret := .Values.skipESSecret -}}
+{{ if not $skipESSecret }}
+# ES secret starts
+{{- $esURL := or .Values.esURL (.Files.Get "secrets/ES_URL.secret") -}}
+{{ if $esURL }}
+---
+apiVersion: v1
+data:
+  ES_URL.secret: {{ $esURL | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.esSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_es_secret: "Please take a look at the NOTES.txt file"
+{{ end }}
+# ES secret ends
+{{ end }}
+{{- $skipZipSecret := .Values.skipZipSecret -}}
+{{ if not $skipZipSecret }}
+# ZIP secret starts
+{{- $zipPass := or .Values.zipPass (.Files.Get "secrets/ZIPPASS.secret") -}}
+{{ if $zipPass }}
+---
+apiVersion: v1
+data:
+  ES_URL.secret: {{ $zipPass | b64enc }}
+kind: Secret
+metadata:
+  namespace: '{{ .Values.namespace }}'
+  name: {{ .Values.zipSecret }}
+  labels:
+    type: 'secret'
+{{- with .Values.labels -}}
+{{ toYaml . | nindent 4 }}
+{{ end }}
+    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
+    helm.sh/chart: {{ include "sds-helm.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+type: {{ .Values.secretType }}
+{{ else }}
+missing_zip_secret: "Please take a look at the NOTES.txt file"
+{{ end }}
+# ZIP secret ends
 {{ end }}
 {{ end }}
