--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -52,7 +52,7 @@ esURL: 'http://127.0.0.1:9200'
 concurrencyPolicy: Forbid
 fullnameOverride: sds
 imagePullPolicy: Always
-syncCommand: 'sds'
+syncCommand: './run.sh'
 syncImage: 'lukaszgryglicki/sync-data-sources-'
 syncPodName: sds
 syncRestartPolicy: Never
