No default ES URL
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -48,12 +48,12 @@
 
 # Standard values:
 deployEnv: 'set-me'
-esURL: 'http://127.0.0.1:9200'
+esURL: ''
 concurrencyPolicy: Forbid
 fullnameOverride: sds
 imagePullPolicy: Always
 syncCommand: './run.sh'
-syncImage: 'lukaszgryglicki/sync-data-sources-'
+syncImage: 'lukaszgryglicki/sync-data-sources'
 syncPodName: sds
 syncRestartPolicy: Never
 limitsCPU: '48000m'
