--- a/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/secrets.yaml
@@ -72,7 +72,7 @@ missing_es_secret: "Please take a look at the NOTES.txt file"
 ---
 apiVersion: v1
 data:
-  ES_URL.secret: {{ $zipPass | b64enc }}
+  ZIPPASS.secret: {{ $zipPass | b64enc }}
 kind: Secret
 metadata:
   namespace: '{{ .Values.namespace }}'
