Handle PV continue
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -85,6 +85,13 @@ spec:
     image: '{{ .Values.debugImage }}-{{ .Values.deployEnv }}'
     imagePullPolicy: {{ .Values.imagePullPolicy }}
     name: {{ .Values.debugPodName }}
+    volumeMounts:
+    - name: '{{ .Values.pvMountName }}'
+      mountPath: '{{ .Values.pvMountPath }}'
+  volumes:
+  - name: '{{ .Values.pvName }}'
+    persistentVolumeClaim:
+      claimName: '{{ .Values.pvName }}'
   restartPolicy: {{ .Values.imageRestartPolicy }}
 {{ if .Values.useNodeSelector }}
   nodeSelector:
