--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -86,7 +86,7 @@ spec:
     imagePullPolicy: {{ .Values.imagePullPolicy }}
     name: {{ .Values.debugPodName }}
     volumeMounts:
-    - name: '{{ .Values.pvMountName }}'
+    - name: '{{ .Values.pvName }}'
       mountPath: '{{ .Values.pvMountPath }}'
   volumes:
   - name: '{{ .Values.pvName }}'
