Adding MAX RETRY option and making perceval usable
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -35,6 +35,8 @@ spec:
         cpu: '{{ .Values.limitsCPU }}'
 {{ end }}
     env:
+    - name: SDS_MAXRETRY
+      value: '{{ .Values.sdsMaxRetry }}'
     - name: SDS_DEBUG
       value: '{{ .Values.sdsDebug }}'
     - name: SDS_CMDDEBUG
