Detecting p2o.py errors
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -49,6 +49,8 @@ spec:
       value: '{{ .Values.sdsCtxOut }}'
     - name: SDS_SKIPTIME
       value: '{{ .Values.sdsSkipTime }}'
+    - name: SDS_ES_BULKSIZE
+      value: '{{ .Values.esBulkSize }}'
     - name: SH_USER
       valueFrom:
         secretKeyRef:
