--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -66,6 +66,8 @@ spec:
               value: '{{ .Values.sdsCtxOut }}'
             - name: SDS_SKIPTIME
               value: '{{ .Values.sdsSkipTime }}'
+            - name: SDS_ES_BULKSIZE
+              value: '{{ .Values.esBulkSize }}'
             - name: SH_USER
               valueFrom:
                 secretKeyRef:
