Specify node(s) to run this program
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -82,9 +82,9 @@ pvMountPath: '/root/.perceval'
 useResourcesLimits: ''
 labels:
   name: sds
-useNodeSelector: ''
+useNodeSelector: '1'
 nodeSelector:
-  lfda: devstats
+  lfda: grimoire
 debugPod: ''
 debugPodName: 'sds-debug'
 debugCommand: '/bin/sleep'
