Fix enpoints that ends with /
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -5,6 +5,7 @@ RUN go get -u github.com/LF-Engineering/sync-data-sources/sources
 WORKDIR /go/src/github.com/LF-Engineering/sync-data-sources/sources
 RUN make -f ./Makefile dockerinstall
 FROM lukaszgryglicki/dev-analytics-grimoire-docker-minimal
+COPY docker-images/.gitconfig /root/.gitconfig
 COPY docker-images/scripts/*.sh /
 COPY --from=builder /go/bin/syncdatasources /usr/bin/
 COPY sources/data.zip /data.zip
