--- a/helm-charts/sds-helm/sds-helm/templates/pv.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/pv.yaml
@@ -5,7 +5,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   namespace: '{{ .Values.namespace }}'
-  name: '{{ .Values.pvName }}'
+  name: '{{ .Values.pvName }}-{{ .Values.nodeIdx }}'
   labels:
     type: pvc
 {{- with .Values.labels -}}
