Adding multiple nodes support to helm chart
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/values.yaml
+++ b/helm-charts/sds-helm/sds-helm/values.yaml
@@ -79,8 +79,7 @@ pvSize: 100Gi
 pvMountPath: '/root/.perceval'
 useResourcesLimits: ''
 nodeHash: ''
-nodeNum: ''
-nodeIdx: '0'
+nodeNum: 1
 labels:
   name: sds
 useNodeSelector: '1'
