--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -1,5 +1,7 @@
 {{- $debugPod := .Values.debugPod -}}
 {{ if $debugPod }}
+{{- $root := . -}}
+{{- range $nodeNum := untilStep 0 .Values.nodeNum 1 }}
 ---
 apiVersion: v1
 kind: Pod
