--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -1,38 +1,41 @@
 {{- $skipCron := .Values.skipCron -}}
 {{ if not $skipCron }}
+{{- $root := . -}}
+{{- $nodeIdx := .Values.nodeIdx -}}
+{{- range $nIdx := untilStep 0 (.Values.nodeNum|int) 1 -}}
+{{ if or (not $nodeIdx) (eq $nIdx ($nodeIdx|int)) }}
 ---
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  namespace: '{{ .Values.namespace }}'
-  name: '{{ .Values.syncPodName }}-{{ .Values.nodeIdx }}'
+  namespace: '{{ $root.Values.namespace }}'
+  name: '{{ $root.Values.debugPodName }}-{{ $nIdx }}'
   labels:
     type: 'cron'
-{{- with .Values.labels -}}
+{{- with $root.Values.labels -}}
 {{ toYaml . | nindent 4 }}
 {{ end }}
-    app.kubernetes.io/name: {{ include "sds-helm.name" . }}
-    helm.sh/chart: {{ include "sds-helm.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.kubernetes.io/instance: sds
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: sds
 spec:
-  schedule: '{{ .Values.schedule }}'
-  concurrencyPolicy: {{ .Values.concurrencyPolicy }}
+  schedule: '{{ $root.Values.schedule }}'
+  concurrencyPolicy: {{ $root.Values.concurrencyPolicy }}
   jobTemplate:
     spec:
       template:
         metadata:
-          name: '{{ .Values.syncPodName }}-{{ .Values.nodeIdx }}'
+          name: '{{ $root.Values.syncPodName }}-{{ $nIdx }}'
           labels:
             type: 'sds'
-{{- with .Values.labels -}}
+{{- with $root.Values.labels -}}
 {{ toYaml . | nindent 12 }}
 {{ end }}
-            app.kubernetes.io/name: {{ include "sds-helm.name" . }}
-            helm.sh/chart: {{ include "sds-helm.chart" . }}
-            app.kubernetes.io/instance: {{ .Release.Name }}
-            app.kubernetes.io/managed-by: {{ .Release.Service }}
+            app.kubernetes.io/instance: sds
+            app.kubernetes.io/managed-by: Helm
+            app.kubernetes.io/name: sds
         spec:
+{{ if gt ($root.Values.nodeNum|int) 1 }}
           affinity:
             podAntiAffinity:
               requiredDuringSchedulingIgnoredDuringExecution:
@@ -43,97 +46,100 @@ spec:
                     values:
                     - sds
                 topologyKey: kubernetes.io/hostname
+{{ end }}
           containers:
           - command:
-            - {{ .Values.syncCommand }}
-{{ if .Values.syncCommandArgs }}
+            - {{ $root.Values.syncCommand }}
+{{ if $root.Values.syncCommandArgs }}
             args:
-{{- with .Values.syncCommandArgs -}}
+{{- with $root.Values.syncCommandArgs -}}
 {{ toYaml . | nindent 14 }}
 {{ end }}
 {{ end }}
-{{ if .Values.useResourcesLimits }}
+{{ if $root.Values.useResourcesLimits }}
             resources:
               requests:
-                memory: '{{ .Values.requestsMemory }}'
-                cpu: '{{ .Values.requestsCPU }}'
+                memory: '{{ $root.Values.requestsMemory }}'
+                cpu: '{{ $root.Values.requestsCPU }}'
               limits:
-                memory: '{{ .Values.limitsMemory }}'
-                cpu: '{{ .Values.limitsCPU }}'
+                memory: '{{ $root.Values.limitsMemory }}'
+                cpu: '{{ $root.Values.limitsCPU }}'
 {{ end }}
             env:
             - name: SDS_NODE_HASH
-              value: '{{ .Values.nodeHash }}'
+              value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
-              value: '{{ .Values.nodeNum }}'
+              value: '{{ $root.Values.nodeNum }}'
             - name: SDS_NODE_IDX
-              value: '{{ .Values.nodeIdx }}'
+              value: '{{ $nIdx }}'
             - name: SDS_MAXRETRY
-              value: '{{ .Values.sdsMaxRetry }}'
+              value: '{{ $root.Values.sdsMaxRetry }}'
             - name: SDS_DEBUG
-              value: '{{ .Values.sdsDebug }}'
+              value: '{{ $root.Values.sdsDebug }}'
             - name: SDS_CMDDEBUG
-              value: '{{ .Values.sdsCmdDebug }}'
+              value: '{{ $root.Values.sdsCmdDebug }}'
             - name: SDS_ST
-              value: '{{ .Values.sdsST }}'
+              value: '{{ $root.Values.sdsST }}'
             - name: SDS_NCPUS
-              value: '{{ .Values.sdsNCPUs }}'
+              value: '{{ $root.Values.sdsNCPUs }}'
             - name: SDS_CTXOUT
-              value: '{{ .Values.sdsCtxOut }}'
+              value: '{{ $root.Values.sdsCtxOut }}'
             - name: SDS_SKIPTIME
-              value: '{{ .Values.sdsSkipTime }}'
+              value: '{{ $root.Values.sdsSkipTime }}'
             - name: SDS_ES_BULKSIZE
-              value: '{{ .Values.esBulkSize }}'
+              value: '{{ $root.Values.esBulkSize }}'
             - name: SH_USER
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.shSecret }}
+                  name: {{ $root.Values.shSecret }}
                   key: SH_USER.secret
             - name: SH_HOST
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.shSecret }}
+                  name: {{ $root.Values.shSecret }}
                   key: SH_HOST.secret
             - name: SH_PORT
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.shSecret }}
+                  name: {{ $root.Values.shSecret }}
                   key: SH_PORT.secret
             - name: SH_PASS
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.shSecret }}
+                  name: {{ $root.Values.shSecret }}
                   key: SH_PASS.secret
             - name: SH_DB
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.shSecret }}
+                  name: {{ $root.Values.shSecret }}
                   key: SH_DB.secret
             - name: SDS_ES_URL
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.esSecret }}
+                  name: {{ $root.Values.esSecret }}
                   key: ES_URL.secret
             - name: ZIPPASS
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Values.zipSecret }}
+                  name: {{ $root.Values.zipSecret }}
                   key: ZIPPASS.secret
-            image: '{{ .Values.syncImage }}-{{ .Values.deployEnv }}'
-            imagePullPolicy: {{ .Values.imagePullPolicy }}
-            name: '{{ .Values.syncPodName }}'
+            image: '{{ $root.Values.syncImage }}-{{ $root.Values.deployEnv }}'
+            imagePullPolicy: {{ $root.Values.imagePullPolicy }}
+            name: '{{ $root.Values.syncPodName }}-{{ $nIdx }}'
             volumeMounts:
-            - name: '{{ .Values.pvName }}-{{ .Values.nodeIdx }}'
-              mountPath: '{{ .Values.pvMountPath }}'
+            - name: '{{ $root.Values.pvName }}-{{ $nIdx }}'
+              mountPath: '{{ $root.Values.pvMountPath }}'
           volumes:
-          - name: '{{ .Values.pvName }}-{{ .Values.nodeIdx }}'
+          - name: '{{ $root.Values.pvName }}-{{ $nIdx }}'
             persistentVolumeClaim:
-              claimName: '{{ .Values.pvName }}-{{ .Values.nodeIdx }}'
-          restartPolicy: {{ .Values.syncRestartPolicy }}
-{{ if .Values.useNodeSelector }}
+              claimName: '{{ $root.Values.pvName }}-{{ $nIdx }}'
+          restartPolicy: {{ $root.Values.syncRestartPolicy }}
+{{ if $root.Values.useNodeSelector }}
           nodeSelector:
-{{- with .Values.nodeSelector -}}
+{{- with $root.Values.nodeSelector -}}
 {{ toYaml . | nindent 12 }}
+{{ end }}
+{{ end }}
 {{ end }}
 {{ end }}
 {{ end }}
