--- a/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/debug-pod.yaml
@@ -11,7 +11,7 @@ metadata:
   namespace: '{{ $root.Values.namespace }}'
   name: '{{ $root.Values.debugPodName }}-{{ $nIdx }}'
   labels:
-    type: 'sds'
+    type: 'sds-debug'
 {{- with $root.Values.labels -}}
 {{ toYaml . | nindent 4 }}
 {{ end }}
@@ -28,7 +28,7 @@ spec:
           - key: type
             operator: In
             values:
-            - sds
+            - sds-debug
         topologyKey: kubernetes.io/hostname
 {{ end }}
   containers:
