Task command line output and setting dry run mode fake command exit status 2
Signed-off-by: Lukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
+++ b/helm-charts/sds-helm/sds-helm/templates/sync-cron-job.yaml
@@ -68,6 +68,8 @@ spec:
             env:
             - name: SDS_DRY_RUN
               value: '{{ $root.Values.dryRun }}'
+            - name: SDS_DRY_RUN_CODE
+              value: '{{ $root.Values.dryRunCode }}'
             - name: SDS_NODE_HASH
               value: '{{ $root.Values.nodeHash }}'
             - name: SDS_NODE_NUM
